Added reload command for the config with mc2048.reload permission node; and moved some basic phrases to said config file

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -19,3 +19,13 @@ commands:
       - 2048hiscore
       - 2048score
       - score2048
+
+  reload:
+    description: Reload the configuration file without having to reboot the server.
+    usage: /<command>
+    aliases: [ config, load, restart ]
+
+permissions:
+  mc2048.reload:
+    description: Allow usage of /config
+    default: op
