--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
       <groupId>net.kyori</groupId>
       <version>4.14.0</version>
     </dependency>
+
+    <dependency>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <scope>test</scope>
+      <version>5.9.1</version>
+    </dependency>
   </dependencies>
 
 </project>
