--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,18 @@
       <version>4.14.0</version>
     </dependency>
 
+    <!--    test-->
     <dependency>
       <artifactId>junit-jupiter-engine</artifactId>
       <groupId>org.junit.jupiter</groupId>
       <scope>test</scope>
       <version>5.9.1</version>
+    </dependency>
+    <dependency>
+      <artifactId>mockito-core</artifactId>
+      <groupId>org.mockito</groupId>
+      <scope>test</scope>
+      <version>5.14.2</version>
     </dependency>
   </dependencies>
 
