--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,33 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-shade-plugin</artifactId>
+        <executions>
+          <execution>
+            <configuration>
+              <relocations>
+                <relocation>
+                  <pattern>net.kyori</pattern>
+                  <shadedPattern>io.stealingdapenta.shaded.net.kyori</shadedPattern>
+                </relocation>
+              </relocations>
+            </configuration>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>3.4.0</version>
+      </plugin>
+    </plugins>
+  </build>
+
+
   <dependencies>
     <dependency>
       <artifactId>spigot-api</artifactId>
@@ -24,6 +51,16 @@
       <artifactId>adventure-api</artifactId>
       <groupId>net.kyori</groupId>
       <version>4.14.0</version>
+    </dependency>
+    <dependency>
+      <artifactId>adventure-text-minimessage</artifactId>
+      <groupId>net.kyori</groupId>
+      <version>4.17.0</version>
+    </dependency>
+    <dependency>
+      <artifactId>adventure-platform-bukkit</artifactId>
+      <groupId>net.kyori</groupId>
+      <version>4.3.4</version>
     </dependency>
 
     <!--    test-->
@@ -40,5 +77,4 @@
       <version>5.14.2</version>
     </dependency>
   </dependencies>
-
 </project>
