--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: MC2048
 author: StealingDaPenta
 main: io.stealingdapenta.mc2048.MC2048
-version: 1.1.5
+version: 1.1.6
 description: Play 2048 in MC :)
 api-version: 1.21
 
@@ -10,15 +10,15 @@ commands:
     description: Launch a new game.
     usage: /<command>
 
-  top:
+  2048top:
     description: Check out the top 10 best players!
     usage: /<command>
 
-  reload:
+  2048reload:
     description: Reload the configuration file without having to reboot the server.
     usage: /<command>
 
-  help:
+  2048help:
     description: Show the legend and general information.
     usage: /<command>
 
