--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,11 +7,11 @@ msg_no_perms: "&cNo permission."
 msg_not_player: "&cOnly players can run this command!"
 msg_reloaded: "&aReloaded MC2048 config!"
 msg_parsing_error: "&cError parsing the %s value in the config file!"
-msg_game_started: "" # "&aGame started, good luck!"
-msg_invalid_move: "" # "&cInvalid move!"
-msg_undid_last_move: "" # "&aUndid last move!"
-msg_attempt_protection: "" # "&7Game wasn't saved because you didn't do anything!"
-msg_game_over: "" # "&4Game over!"
+msg_game_started: "&aGame started, good luck!"
+msg_invalid_move: "&cInvalid move!"
+msg_undid_last_move: "&aUndid last move!"
+msg_attempt_protection: "&7Game wasn't saved because you didn't do anything!"
+msg_game_over: "&4Game over!"
 title_game_over: "&4Game over!"
 title_game_over_sub: "Score: %s | Playtime: %k"
 
