Implemented StringUtil's formatInt() & formatLong()
- started formatting numbers with commands, like "200,000"
+ changed largest block from infinity to 262144

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -128,5 +128,5 @@ material_sixty_five_thousand_five_hundred_thirty_six: DIAMOND
 material_sixty_five_thousand_five_hundred_thirty_six_cmd: 1000
 material_hundred_thirty_one_thousand_seventy_two: DIAMOND_BLOCK
 material_hundred_thirty_one_thousand_seventy_two_cmd: 1000
-material_infinity: NETHERITE_BLOCK
-material_infinity_cmd: 1000
+material_two_hundred_sixty_two_thousand_hundred_fourty_four: NETHERITE_BLOCK
+material_two_hundred_sixty_two_thousand_hundred_fourty_four_cmd: 1000
